# ED

./: LICENSE  Makefile.am  Makefile.in  Manual(EN).docx  Manual(日).docx  README.md  analysis-DSFlanczos-tmp-2019Jun28.f90  config.h.in  configure  configure.ac  run_hoku.sh  マニュアル(日).docx
input/: a.out  comp.sh  make-list-xxz-cubic.f90  make_input.sh
output/: alpha_beta_values_sztot0150_E0.d  get_e0.sh
output_ref/: alpha_beta_values_E0-tmp.d
script/: make.sh  run.sh
source/: Makefile  Makefile.am  Makefile.in  TAGS  eigen_solver.f90  eigen_solver.mod  get_expectation_values.f90  get_expectation_values.mod  ham2vec.mod  ham2vec_v3.f90  input_param.f90  input_param.mod  lanczos.f90  lanczos.mod  main.f90  state_lists.f90  state_lists.mod
source_DSFLan/: Makefile.am  Makefile.in  main.f90
source_only_u1/: Makefile  Makefile.am  Makefile.in  TAGS  eigen_solver.f90  eigen_solver.mod  get_expectation_values.f90  get_expectation_values.mod  ham2vec.mod  ham2vec_v3.f90  input_param.f90  input_param.mod  lanczos.f90  lanczos.mod  main.f90  mk_input_list.f90  my_l1_blas.f90  state_lists.f90  state_lists.mod
